// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard - Snapshot > should render metric card with centralized content 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Total de Alunos
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            45
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="lucide lucide-users h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard - Snapshot > should render metric card with downward trend 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Cancelamentos
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            3
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="lucide lucide-users h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard - Snapshot > should render metric card without trend 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Receita
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            15000
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="lucide lucide-users h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
